[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/topdown-shooter/PNG/Soldier 1/soldier1_gun.png" type="Texture" id=1]
[ext_resource path="res://Soldier_Turret.gd" type="Script" id=2]
[ext_resource path="res://Assets/kenney_topdowntanksredux/PNG/Default size/Tank Effects/shotThin.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 224.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 10 )

[node name="Soldier_Turret" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 8
collision_mask = 65
script = ExtResource( 2 )

[node name="Shot_Cooldown" type="Timer" parent="."]

[node name="Shot_Effect_Cooldown" type="Timer" parent="."]
wait_time = 0.1

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 1 )

[node name="SightLine" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 220 )

[node name="Entry" type="Sprite" parent="."]
visible = false
position = Vector2( -10, 0 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[connection signal="timeout" from="Shot_Cooldown" to="." method="_on_Shot_Cooldown_timeout"]
[connection signal="timeout" from="Shot_Effect_Cooldown" to="." method="_on_Shot_Effect_Cooldown_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
